Enhance IGDBClientService and CacheConfig for improved game search functionality
- Added support for searching games by Steam App IDs in IGDBClientService, including batching and caching mechanisms.
- Introduced a new cache for Steam ID searches in CacheConfig, allowing efficient retrieval of game data based on Steam IDs.
- Refactored existing methods for better clarity and added logging for improved traceability during API interactions.
- Updated cache eviction logic to clear both game search caches when necessary.